[package]
name = "tokio-pg-mapper"
version = "0.3.0"
description = "Proc-macro library used to map a tokio-postgres row to a Rust type (struct)"
authors = ["Darin Gordon <dkcdkg@gmail.com>", "Zeyla Hellyer <zeyla@hellyer.dev>"]
repository = "https://www.github.com/Dowwie/tokio-postgres-mapper"
homepage = "https://www.github.com/Dowwie/tokio-postgres-mapper"
license = "ISC"
keywords = ["tokio", "postgres", "mapper"]
edition = "2018"

[lib]
doctest = false

[dependencies]
tokio-postgres = {version="0.6", features=["with-serde_json-1","with-chrono-0_4"]}
tokio-pg-mapper-derive = { path = "pg_mapper_derive", optional = true }

[[example]]
name = "src"
required-features = ["derive"]

[features]
derive = ["tokio-pg-mapper-derive"]
