[package]
name = "postgres-mapper-derive-example"
version = "0.3.0"
authors = ["Lenard Pratt <l3np27@gmail.com>"]
edition = "2018"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio-pg-mapper]
path=".."
features=["derive"]

[dependencies]
tokio-postgres = {version="0.7", features=["with-serde_json-1","with-chrono-0_4"]}
postgres-types = {version = "0.2", features = ["derive", "with-serde_json-1"]}